--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "hbjspeducos",
   "version": "1.0.0",
   "description": "",
-  "main": "check.js",
+  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
